cambios sugeridos por el revisor de codigo

--- a/index.html
+++ b/index.html
@@ -194,15 +194,15 @@
                 class="person__image person__image_size_m"
               />
             </div>
-            <div class="person_name_cannon">
+            <div class="person person_name_cannon">
               <img
                 src="/images/person_cannon.png"
                 alt="foto de Annie Jump Cannon"
                 class="person__image person__image_size_m"
               />
-              <p class="person__caption">Annie Jump Cannon</p>
+              <p class="person person__caption">Annie Jump Cannon</p>
             </div>
-            <div class="person_name_mitchell">
+            <div class="person person_name_mitchell">
               <img
                 src="/images/person_mitchell.png"
                 alt="foto de Maria Mitchell"
@@ -210,7 +210,7 @@
               />
               <p class="person__caption">Maria Mitchell</p>
             </div>
-            <div class="person_name_tarter">
+            <div class="person person_name_tarter">
               <p class="person__caption">Jill Tarter</p>
               <img
                 src="/images/person_tarter.png"
