cambios sugeridos por revisor de codigo

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 alt="foto de Annie Jump Cannon"
                 class="person__image person__image_size_m"
               />
-              <p class="person person__caption">Annie Jump Cannon</p>
+              <p class="person__caption">Annie Jump Cannon</p>
             </div>
             <div class="person person_name_mitchell">
               <img
