--- a/index.html
+++ b/index.html
@@ -324,9 +324,7 @@
             </ul>
           </div>
         </div>
-        <div class="footer__copyright">
-          <p>© 2024 Itzel Marisol Giron Rocha</p>
-        </div>
+        <p class="footer__copyright">© 2024 Itzel Marisol Giron Rocha</p>
       </footer>
     </div>
   </body>
